BackupSchedule structure changed